<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EventsLocator</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Sign in</string>
    <string name="register">Sign up</string>
    <string name="login_save">Remember?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
  	<string name="confirmpassword">Confirm Password</string>
    <string name="firstname">First Name</string>
    <string name="name">Name</string>
    <string name="agreeagb">Agree AGB</string>
    <string name="submit">Submit</string>
    <string name="event_date">Date</string>
    <string name="event_name">Name</string>
    <string name="event_place">Place</string>
    <string name="komma">,</string>
    <string name="recent">Recent</string>
    <string name="upcoming">Upcoming</string>
 	<string name="participate">Participate</string>
 	<string name="showparticipant">Show Participant</string>
 	<string name="showcomments">Show Comments</string>
 	<string name="comments">Comments</string>
 	<string name="comment1">Comment</string>
 	<string name="comment2">Comment</string>
 	<string name="comment3">Comment</string>
 	<string name="save">Save</string>
 	<string name="searchresult">Search Result</string>
 	<string name="participants">Participants</string>
 	<string name="event_description">Description</string>
 	<string name="user_description">Description</string>
 	<string name="description">Description</string>
 	<string name="user_comments_title">Comments</string>
 	<string name="personaldata">Name,Surname</string>
 	<string name="wifi">WiFi Connection available</string>
    <string name="mobile">Mobile Connection available</string>
    <string name="not_connected">No Network available</string>
    <string name="mock">ATTENTION: offline test mode</string>
    <string name="connection_data_prefs">Configuration of the connection to the web wervice</string>
    <string name="protocol_title">Http(s) Protocol</string>
    <string name="protocol_summary">Http or https as protocol for the web wervice</string>
    <string name="host_title">Host</string>
    <string name="host_summary">Host or ip address for the web service, e.g. 10.0.2.2</string>
    <string name="port_title">Port Number</string>
    <string name="port_summary">Port number for the web service, e.g. 80 or 8080</string>
    <string name="path_title">Path</string>
    <string name="path_summary">Path for the web service, e.g. /friendslocator/rest</string>
    <string name="timeout_title">Timeout for server access</string>
    <string name="timeout_summary">Timeout in seconds</string>
    <string name="username_title">Username</string>
    <string name="username_summary">Username for RESTful Web Service</string>
    <string name="password_title">Password</string>
    <string name="password_summary">Password for RESTful Web Service</string>
    <string name="mock_pref">Configuration of mock objects</string>
    <string name="mock_title">Offline test mode</string>
    <string name="mock_summary">Instead of RESTful Web Service</string>
    <string name="please_wait">Please wait &#8230;</string>
    <string name="error_email_blank">Please enter your mailadress</string>
    <string name="error_password_blank">Please enter your password</string>
    <string name="error_email_invalid">No user found with Email: %s</string>
    <string name="error_agb_not_accepted">You must confirm the agbs</string>
    <string name="error_password_not_same">Password and confirmation are different</string>
    <string name="error_name_blank">Please enter your name</string>
    <string name="error_surname_blank">Please enter your surname</string>
    <string name="error_http">No (HTTP-)connection to server</string>
    <string name="event_recently">Recently:</string>
    <string name="event_near_by">Near by:</string>
    <string name="event_upcoming">Upcomming:</string>
    <string name="event_passed">Passed:</string>
    <string name="desc">Foto</string>
    <string name="ic_action_search">Suche</string>
    <string name="ic_action_settings">Einstellungen</string>
</resources>
