<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
			android:title="@string/connection_data_prefs">
		
		<ListPreference
			android:key="protocol"
			android:title="@string/protocol_title"
			android:summary="@string/protocol_summary"
			android:defaultValue="http"
			android:entries="@array/protocol_values"
			android:entryValues="@array/protocol_values" />
	
		<EditTextPreference
			android:key="host"
			android:title="@string/host_title"
			android:summary="@string/host_summary"
			android:defaultValue="10.0.2.2" />
	
		<EditTextPreference
			android:key="port"
			android:title="@string/port_title"
			android:summary="@string/port_summary"
			android:defaultValue="8080" />
	
		<EditTextPreference
			android:key="path"
			android:title="@string/path_title"
			android:summary="@string/path_summary"
			android:defaultValue="/shop/rest" />

		<EditTextPreference
			android:key="timeout"
			android:title="@string/timeout_title"
			android:summary="@string/timeout_summary"
			android:defaultValue="3" />
		
		<EditTextPreference
			android:key="username"
			android:title="@string/username_title"
			android:summary="@string/username_summary" />
		
		<EditTextPreference
			android:key="password"
			android:title="@string/password_title"
			android:summary="@string/password_summary"
			android:password="true" />
		
	</PreferenceCategory>
	
	<PreferenceCategory
			android:title="@string/mock_pref">
		
		<CheckBoxPreference
			android:key="mock"
			android:title="@string/mock_title"
			android:summary="@string/mock_summary"
			android:defaultValue="false" />
	
	</PreferenceCategory>

</PreferenceScreen>
