<?xml version="1.0" encoding="UTF-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:orientation="vertical"
    android:padding="50dp" >
    
   

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_gravity="top"
        android:layout_row="0"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingTop="25dp" >

    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_gravity="top"
        android:layout_row="1"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingTop="25dp" />

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_gravity="top"
        android:layout_row="2"
        android:ems="10"
        android:hint="@string/confirmpassword"
        android:inputType="text"
        android:paddingTop="25dp" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_gravity="top"
        android:layout_row="3"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="text"
        android:paddingTop="25dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_gravity="top"
        android:layout_row="4"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingTop="25dp" />

    <Button
        android:id="@+id/submit"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:layout_gravity="left|top"
        android:layout_row="5"
        android:hint="@string/submit"
        android:onClick="submit" />

    <CheckBox
        android:id="@+id/agreeAgb"
        android:layout_column="0"
        android:layout_gravity="start"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="5dp"
        android:layout_row="5"
        android:paddingEnd="50dp"
        android:text="@string/agreeagb" />


</GridLayout>