<?xml version="1.0" encoding="UTF-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:orientation="vertical"
    android:padding="50dp" >
    
  
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_gravity="top"
        android:layout_row="0"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingTop="25dp" >

    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_gravity="top"
        android:layout_row="1"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingTop="25dp" />

  

    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_gravity="top"
        android:layout_row="3"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="text"
        android:paddingTop="25dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_gravity="top"
        android:layout_row="4"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingTop="25dp" />
    
    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_gravity="top"
        android:layout_row="5"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="text"
        android:paddingTop="25dp" />

    <Button
        android:id="@+id/save"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:layout_gravity="end"
        android:layout_row="6"
        android:hint="@string/save"
        android:onClick="save" />
    
    </GridLayout>