<?xml version="1.0" encoding="UTF-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="12"
    android:orientation="vertical"
    android:padding="50dp" >

    <Button
        android:id="@+id/showcomments"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="end"
        android:layout_row="8"
        android:hint="@string/showcomments"
        android:onClick="showcomments" />

    <Button
        android:id="@+id/showparticipant"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="end"
        android:layout_row="7"
        android:hint="@string/showparticipant"
        android:onClick="showparticipant" />
    
    <Button
        android:id="@+id/participate"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="end"
        android:layout_row="9"
        android:hint="@string/participate"
        android:onClick="participate" />
    

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="145dp"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="6" />

    <LinearLayout
        android:layout_width="226dp"
        android:layout_height="128dp"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="6" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.11"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/event_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/event_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_place"
                    android:onClick="onClickPlace"
       				android:clickable="true"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
				
                <TextView
                    android:id="@+id/event_trennung"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/komma"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
                
                <TextView
                    android:id="@+id/event_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_date"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>

            <TextView
                android:id="@+id/event_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_description"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:src="@drawable/ic_launcher"/>

    </LinearLayout>

    
</GridLayout>