<?xml version="1.0" encoding="UTF-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="15"
    android:orientation="vertical"
    android:padding="50dp" >
    
    <LinearLayout
        android:layout_width="241dp"
        android:layout_height="149dp"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="6" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/event_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/event_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_place"
                    android:onClick="onClickPlace"
       				android:clickable="true"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
				
                <TextView
                    android:id="@+id/event_trennung"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/komma"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
                
                <TextView
                    android:id="@+id/event_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_date"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>

            <TextView
                android:id="@+id/event_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_description"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RatingBar
                android:id="@+id/ratingBar1"
                android:layout_width="142dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:src="@drawable/ic_launcher" />

    </LinearLayout>
    

    <TextView
        android:id="@+id/textcomments"
        android:layout_width="141dp"
        android:layout_height="55dp"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="6"
        android:text="@string/comments"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="169dp"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_row="6" >
    </ListView>

</GridLayout>