<?xml version="1.0" encoding="UTF-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:columnCount="4"
	android:orientation="horizontal"
	android:padding="50dp" >

	<LinearLayout
		android:layout_width="248dp"
		android:layout_height="128dp"
		android:layout_column="0"
		android:layout_gravity="center_horizontal|top"
		android:layout_row="6" >

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_weight="0.08"
			android:orientation="vertical" >

			<TextView
				android:id="@+id/personaldata"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/personaldata"
				android:textAppearance="?android:attr/textAppearanceSmall" />

			<TextView
				android:id="@+id/user_description"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/user_description" />
		</LinearLayout>

		<ImageView
			android:id="@+id/imageView2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0.08"
			android:src="@drawable/ic_launcher" />
	</LinearLayout>

	

	<ScrollView
		android:id="@+id/scrollView1"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_column="0"
		android:layout_gravity="fill_vertical"
		android:layout_row="8" >

		<FrameLayout
			android:id="@+id/user_comment_fragment"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >

		</FrameLayout>

	</ScrollView>

	<TextView
	    android:id="@+id/user_comments_title"
	    android:layout_column="0"
	    android:layout_gravity="center"
	    android:layout_row="9"
	    android:text="@string/user_comments_title"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

</GridLayout>